tests/errors/tc_expr_input_notype.lx
@module "main"

pub const main -> fn () int {
    input();
    return 0;
}
